[tool.poetry]
name = "pokeai"
version = "0.1.0"
description = ""
authors = ["select766 <select766@outlook.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.6"
optuna = "^4.3.0"
pymongo = "^4.10.1"
PyYAML = "^6.0.2"
python-dotenv = "^1.0.1"
nashpy = "^0.0.41"
torch = "^2.6.0"
optuna-dashboard = "^0.18.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.0"
matplotlib = "^3.9.2"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
